examples/programs/valid/addr_locations.sst
.version 1
; Valid locations for words 0 and 1 in full.json
; word 0 has sites 0-9, word 1 has sites 0-9
; LocationAddr (64-bit): [zone_id:8][word_id:16][site_id:16][pad:24]

const_loc 0x0000000000000000    ; zone 0, word 0, site 0
const_loc 0x0000000005000000    ; zone 0, word 0, site 5
const_loc 0x0000000009000000    ; zone 0, word 0, site 9
const_loc 0x0000010000000000    ; zone 0, word 1, site 0
const_loc 0x0000010005000000    ; zone 0, word 1, site 5
const_loc 0x0000010009000000    ; zone 0, word 1, site 9
initial_fill 6
halt
