examples/programs/invalid/stack_move_wrong_type.sst
.version 1
; Invalid: move expects lane-typed values, but stack has locations
; LocationAddr (64-bit): [zone_id:8][word_id:16][site_id:16][pad:24]

const_loc 0x0000000000000000    ; zone 0, word 0, site 0
const_loc 0x0000000001000000    ; zone 0, word 0, site 1
move 2
halt
